netsuite/11.6/modules/ROOT/pages/netsuite-reference.adoc
= NetSuite Connector 11.6 Reference - Mule 4
:page-aliases: connectors::netsuite-connector-reference.adoc, connectors::netsuite/netsuite-reference.adoc



Anypoint Connector for NetSuite synchronizes data and automates business processes between NetSuite and third party applications, either on-premises or in the cloud. The connector makes use of the SuiteTalk WSDL to provide SOAP based integration to generate NetSuite business objects, make use of different authentication levels, and support error handling.

Release Notes: xref:release-notes::connector/netsuite-connector-release-notes-mule-4.adoc[NetSuite Connector Release Notes]

== Configurations
---
[[Config]]
=== Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description a| Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Config_TokenBasedAuthentication, Token-Based Authentication>>
 | The connection types to provide to this configuration. | | x
| Name a| String |  The identifier of this element used to reference it in other components |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Show warnings as errors a| Boolean |  When this preference is enabled, warning messages generated by NetSuite are treated as errors that cause an exception, resulting in rejection of the request. |  false |
| Disable mandatory custom field validation a| Boolean a|  This preference affects the handling of custom fields that are configured in the UI to be mandatory:

* If you set this field to `true`, the fields are not treated as required during SOAP web services requests.
* If you set this field to `false`, the fields are required. |  false |
| Disable system notes for custom fields a| Boolean |  System notes are system-generated records that track changes to a record, including changes to specific field values. This preference lets you disable the creation of system notes for changes to custom fields. Depending on your integration, using this preference can increase performance. |  false |
| Ignore read-only fields a| Boolean |  This preference affects the way the system behaves when you mistakenly submit a value for a read-only field. If you set this preference to `true`, the system ignores these mistakes. |  false |
| Run server SuiteScript and trigger workflows a| Boolean a|  Controls SuiteScript and trigger workflows per request:

* If you do not include this preference in a request, the company preference set on the Web Services Preferences page is used.
* If you include this preference in the request, the connector overrides the company preference set in the UI. |  false |
| Customizations Separator a| String |  Separator used to generate the keys required to provided better support for custom fields and records. If the script ID of the customization that defines a custom field or record contains the separator default character, set up a new ID and regenerate the metadata. |  __ |
| Omit the internal Id in the name of the custom field a| Boolean a| Omits the internal ID from the custom field name:

* If you set this field to `true`, the custom field name is `CUSTOMFIELDTYPEpass:[_]pass:[_]SCRIPTID`.

* If you set this field to `false`, the custom field name is `CUSTOMFIELDTYPEpass:[_]pass:[_]SCRIPTIDpass:[_]pass:[_]INTERNALID`.  a|  false |
|===

==== Connection Types

The connection types to provide to this configuration.

[[Config_TokenBasedAuthentication]]


===== Token-Based Authentication

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Maximum Connections a| Number |  The maximum number of connections that can be active to execute the HTTP requests. The default value, `-1`, does not limit the number of connections to the server. |  -1 |
| Read Timeout a| Number |  Specifies the amount of time that the client waits for a response before it times out. Use `0` to specify that the client should wait indefinitely. |  60000 |
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit for Read Timeout. |  MILLISECONDS |
| Connection Timeout a| Number |  Specifies the amount of time that the client attempts to establish a connection before it times out. Use `0` to specify that the client continue to attempt to open a connection indefinitely. |  60000 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  The time unit for Connection Timeout. |  MILLISECONDS |
| Base Netsuite Address a| String |  The base address to use to connect to NetSuite. The default value is the main NetSuite site. This is used to automatically obtain the endpoint for the service based on the credentials configured, and will need no change. |  https://webservices.netsuite.com |
| Concurrency Management Strategy a| One of:

* <<RandomizedExponentialBackoff>> |  Strategy to use when encountering the `TOO_MANY_REQUESTS` error. |  |
| Wsdl version a| Enumeration, one of:

** V2020_2
** V2021_1 a|  Version of WSDL that the connector uses to communicate with NetSuite:

* If you do not select a value, the connector works with SuiteTalk version `2020pass:[_]2` and existing namespaces in the Mule app must not be modified.

* If you select a WSDL version, remove the SuiteTalk version from all namespaces in the Mule app.
+
The following example shows an original DataWeave script with the SuiteTalk version and a new DataWeave script with the SuiteTalk version removed.

+
----
#%dw 2.0
output application/java
ns ns0 urn:messages_2020_2.platform.webservices.netsuite.com
ns ns01 urn:core_2020_2.platform.webservices.netsuite.com
---
payload.ns0#changePasswordResponse.ns0#sessionResponse.ns01#status.ns01#statusDetail.ns01#code
----

+
----
#%dw 2.0
output application/java
ns ns0 urn:messages.platform.webservices.netsuite.com
ns ns01 urn:core.platform.webservices.netsuite.com
---
payload.ns0#changePasswordResponse.ns0#sessionResponse.ns01#status.ns01#statusDetail.ns01#code
----


a|  |
| SOAP Port a| String |  The SOAP Port path to use to connect to NetSuite, this is relative to the base address. The default value corresponds to the port obtained from the WSDL used in the version of the connector. |  | x
| Show warnings as errors a| Boolean |  When this preference is enabled, warning messages generated by NetSuite are treated as errors that cause an exception, which rejects the request. |  false |
| Disable mandatory custom field validation a| Boolean |  This preference affects the handling of custom fields that are configured in the UI as mandatory. If you set this preference to `true`, the fields are not required during SOAP web services requests. If you set this preference to `false`, the fields are required during SOAP web services requests. |  false |
| Disable system notes for custom fields a| Boolean |  System notes are system-generated records that track changes to a record, including changes to specific field values. This preference allows you to disable the creation of system notes for changes to custom fields. Depending on your integration, using this preference may increase performance. |  false |
| Ignore read-only fields a| Boolean |  This preference affects the way the system behaves when you mistakenly submit a value for a read-only field. If you set this preference to `true`, the system ignores these mistakes. |  false |
| Run server SuiteScript and trigger workflows a| Boolean |  This preference enables you to control SuiteScript and trigger workflows per request. If you do not include this preference in the request, the company preference that is set on the Web Services Preferences page is used. If you include this preference in the request, the company preference that is set on the Web Services Preferences page is overridden. |  false |
| TLS configuration a| <<Tls>> |  Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the keystore in the `tls:context` child element of the `listener-config`.  |  |
| Host a| String |  The hostname of the HTTP proxy, for example, `localhost`. This field requires the port to be set. |  |
| Port a| Number |  The port number of the HTTP proxy, for example, `3128`. The port number must be specified if the hostname is also specified. |  |
| Username a| String |  The username to supply to the HTTP proxy on every request to NetSuite. This field is optional because a user might want to pass through an unauthenticated HTTP proxy. |  |
| Password a| String |  The password to supply to the HTTP proxy on every request to NetSuite. This field is optional because a user might want to pass through an unauthenticated HTTP proxy. |  |
| Non proxied hosts a| String |  A list of comma-separated hosts against which the proxy should not be used |  |
| Consumer Key a| String |  The consumer key value for the enabled token-based authentication integration record |  | x
| Consumer Secret a| String |  The consumer secret value for the token-based authentication integration record|  | x
| Token ID a| String |  The token ID representing the unique combination of a user and integration generated within the NetSuite environment |  | x
| Token Secret a| String |  The respective token secret for the user/integration pair |  | x
| Account Id a| String |  NetSuite SuiteTalk WebService account ID. |  | x
| Signature Algorithm a| String |  The algorithm used to compute the SHA hash signature |  HMAC_SHA256 |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Supported Operations
* <<Add>>
* <<AddList>>
* <<AsyncAddList>>
* <<AsyncDeleteList>>
* <<AsyncGetList>>
* <<AsyncInitializeList>>
* <<AsyncSearch>>
* <<AsyncUpdateList>>
* <<AsyncUpsertList>>
* <<Attach>>
* <<ChangeEmail>>
* <<ChangePassword>>
* <<CheckAsyncStatus>>
* <<Delete>>
* <<DeleteList>>
* <<Detach>>
* <<Get>>
* <<GetAccountGovernanceInfo>>
* <<GetAll>>
* <<GetAsyncResult>>
* <<GetBudgetExchangeRate>>
* <<GetCurrencyRate>>
* <<GetCustomizationId>>
* <<GetDataCenterUrls>>
* <<GetDeleted>>
* <<GetIntegrationGovernanceInfo>>
* <<GetItemAvailability>>
* <<GetList>>
* <<GetPostingTransactionSummary>>
* <<GetSavedSearch>>
* <<GetSelectValue>>
* <<GetServerTime>>
* <<Initialize>>
* <<InitializeList>>
* <<Search>>
* <<Update>>
* <<UpdateInviteeStatus>>
* <<UpdateInviteeStatusList>>
* <<UpdateList>>
* <<Upsert>>
* <<UpsertList>>

== Associated Sources
* <<DeletedObjectListener>>
* <<ModifiedObjectListener>>
* <<NewObjectListener>>


== Operations

[[Add]]
== Add
`<netsuite:add>`


Creates a new record.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The message to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[AddList]]
== Add List
`<netsuite:add-list>`


Creates one or more new records.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The add list request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncAddList]]
== Async Add List
`<netsuite:async-add-list>`


An asynchronous request equivalent to Add List operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, NetSuite returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The Async Add List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncDeleteList]]
== Async Delete List
`<netsuite:async-delete-list>`


An asynchronous request equivalent to the Delete List operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, SuiteTalk returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The Async Delete List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncGetList]]
== Async Get List
`<netsuite:async-get-list>`


An asynchronous request equivalent to the Get List operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, SuiteTalk returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The Async Get List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncInitializeList]]
== Async Initialize List
`<netsuite:async-initialize-list>`


An asynchronous request equivalent to the Initialize List operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, SuiteTalk returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The Async Initialize List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncSearch]]
== Async Search
`<netsuite:async-search>`


An asynchronous request equivalent to the Search operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, SuiteTalk returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The type of search that renders the output metadata. |  |
| Message a| Any |  The Async Search request to complete. |  #[payload] |
| Body Fields Only a| Boolean |  Returns the information in the record's body fields only, which significantly improves performance. Fields in associated lists or sublists are not returned. If you set this field to `false`, all fields associated with the record are returned. |  true |
| Return Search Columns a| Boolean |  If `true`, only search columns are returned in your search. |  true |
| Page Size a| Number |  Maximum amount of results per page. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncUpdateList]]
== Async Update List
`<netsuite:async-update-list>`


An asynchronous request equivalent to the Update List operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, SuiteTalk returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The Async Update List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[AsyncUpsertList]]
== Async Upsert List
`<netsuite:async-upsert-list>`


An asynchronous request equivalent to the Upsert List operation.

In asynchronous requests, your client application sends a request to the SuiteTalk platform, which places it in a processing queue and handles it asynchronously with other requests. All available jobs for each polling period are processed contiguously, with no waiting period for an available job.

Once a job is initiated, SuiteTalk returns a job ID in the web services response. Your client application can check the status and result of the request by referencing the job ID.

NOTE: Asynchronous request job IDs are valid for 30 days.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The Async Upsert List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[Attach]]
== Attach
`<netsuite:attach>`


Defines a relationship between two records.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The attach request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[ChangeEmail]]
== Change Email
`<netsuite:change-email>`


Changes the email address for the account.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| New Email a| String |  Your new email address. |  | x
| Current Credentials a| String |  Your current credentials. |  | x
| Just This Account a| Boolean |  Whether to change this account only. |  true |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INSUFFICIENT_PERMISSION
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[ChangePassword]]
== Change Password
`<netsuite:change-password>`


Changes the password for the account.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| New Password a| String |  The new password. |  | x
| Current Password a| String |  Your current credentials. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INSUFFICIENT_PERMISSION
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[CheckAsyncStatus]]
== Check Async Status
`<netsuite:check-async-status>`


Checks whether a particular asynchronous job finished processing.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Job Id a| String |  The ID of the job. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[Delete]]
== Delete
`<netsuite:delete>`


Delete one or more record instances. Not all records can be deleted. For more information, see the NetSuite documentation.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The delete request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Ref Type a| String | Defines the ComplexType of the record. |  |
| Type a| String | Defines the Type of the record. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[DeleteList]]
== Delete List
`<netsuite:delete-list>`


Deletes one or more records. Not all records can be deleted. For more information, see the NetSuite documentation.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The delete list request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Ref Type a| String | Defines the ComplexType of the record. |  |
| Type a| String | Defines the Type of the record. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[Detach]]
== Detach
`<netsuite:detach>`


Deletes a relationship between two records.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The detach request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[Get]]
== Get
`<netsuite:get>`


Retrieves a record by providing the unique ID that identifies the record.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Ref Type a| String | Defines the ComplexType of the record. |  |
| Type a| String | Defines the Type of the record. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[GetAccountGovernanceInfo]]
== Get Account Governance Info
`<netsuite:get-account-governance-info>`


Get the account concurrency limit and the unallocated concurrency limit.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[GetAll]]
== Get All
`<netsuite:get-all>`


Retrieves a list of all records of the specified type.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  |  |
| Message a| Any |  The get All request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[GetAsyncResult]]
== Get Async Result
`<netsuite:get-async-result>`


Returns the result of the specified job if it finished processing.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Job Id a| String |  The ID of the job. |  | x
| Page Index a| Number |  The page number of the asynchronous result. |  1 |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:ASYNC_FAULT
* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[GetBudgetExchangeRate]]
== Get Budget Exchange Rate
`<netsuite:get-budget-exchange-rate>`


Gets and filters all data related to the Budget Exchange Rates table. This table maintains exchange rates between the root-parent and child subsidiaries for use in the budgeting process.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The Get Budget Exchange Rate request, which  contains a budgetExchangeRateFilter. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[GetCurrencyRate]]
== Get Currency Rate
`<netsuite:get-currency-rate>`


Gets the exchange rate between two currencies based on the specified certain date.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  Accepts the argument CurrencyRateFilter, which specifies what to return in the results. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INSUFFICIENT_PERMISSION
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[GetCustomizationId]]
== Get Customization Id
`<netsuite:get-customization-id>`


Returns the IDs of available customizations for a given customization type.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  Customization type |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[GetDataCenterUrls]]
== Get Data Center Urls
`<netsuite:get-data-center-urls>`


Obtains the the NetSuite data center URL for the account.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Account Id a| String |  The account ID. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[GetDeleted]]
== Get Deleted
`<netsuite:get-deleted>`


Returns a list of deleted records for the given record type and date range.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Filter a| Any |  Filters the results|  #[payload] |
| Limit a| Number |  The maximum amount of results to return from this call |  -1 |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Message of [String] payload and [<<NetsuiteSoapAttributes>>] attributes
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:SESSION_TIMED_OUT


[[GetIntegrationGovernanceInfo]]
== Get Integration Governance Info
`<netsuite:get-integration-governance-info>`


Get the concurrency limit for the integration (integrationConcurrencyLimit) and the limit type (limitType), which can be:

* _integrationSpecific, when a limit has been allocated.
* _internal, when it is an internal application. In this case the limit is not displayed.
* _accountLimit, when no specific limit has been allocated to the integration.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[GetItemAvailability]]
== Get Item Availability
`<netsuite:get-item-availability>`


Returns the availability for a given item record reference. If the Multi-Location Inventory feature is enabled, connector returns results for all locations.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The GetItem Availability Request type, which contains an itemAvailabilityFilter |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[GetList]]
== Get List
`<netsuite:get-list>`


Retrieves a list of one or more records by providing the unique ids that identify those records.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The get list request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Ref Type a| String | Defines the ComplexType of the record. |  |
| Type a| String | Defines the Type of the record. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[GetPostingTransactionSummary]]
== Get Posting Transaction Summary
`<netsuite:get-posting-transaction-summary>`


Retrieves a summary of the data posted to the general ledger in an account. You can use the available filters and fields to generate reports that are similar to what you see when you run financial reports such as a Trial Balance, Balance Sheet, or an Income Statement.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Fields a| Any |  Fields for the operation body |  |
| Filters a| Any |  Filters for the operation body |  |
| Operation Id a| String |  Operation ID |  |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Message of [String] payload and [<<NetsuiteSoapAttributes>>] attributes
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:SESSION_TIMED_OUT


[[GetSavedSearch]]
== Get Saved Search
`<netsuite:get-saved-search>`


Retrieves a list of existing saved search IDs on a per-record-type basis.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Search Type a| String |  The targeted search type. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:RETRY_EXHAUSTED


[[GetSelectValue]]
== Get Select Value
`<netsuite:get-select-value>`


Returns valid select options for a particular RecordRef, CustomRecordRef, or enumerated static field.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Field Description a| Any |  The get select value request to complete. |  #[payload] |
| Page Size a| Number |  |  10 |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Message of [String] payload and [<<NetsuiteSoapAttributes>>] attributes
|===

=== For Configurations

* <<Config>>



[[GetServerTime]]
== Get Server Time
`<netsuite:get-server-time>`


Returns the NetSuite server time in GMT, regardless of a user's time zone.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[Initialize]]
== Initialize
`<netsuite:initialize>`


Pre-populates fields on transaction line items with values from a related record.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The initialize request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[InitializeList]]
== Initialize List
`<netsuite:initialize-list>`


Pre-populates fields on transaction line items with values from related records.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The initialize list request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[Search]]
== Search
`<netsuite:search>`

Executes a search on a specific record type based on a set of criteria. This processor has been enhanced with a paging mechanism. Searches can be Basic, Advanced, or Join searches. See SearchRecord for all the available searches.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Key a| String |  The type of search to render the output metadata. |  |
| Message a| Any |  The search request to complete. |  #[payload] |
| Page Size a| Number |  Maximum amount of results per page. |  10 |
| Limit a| Number |  Limits the amount of results produced. Limit &lt;=0 means no limit |  -1 |
| Body Fields Only a| Boolean |  Returns the information in the record's body fields only, which significantly improves performance. Fields in associated lists or sublists are not returned. If you set this field to `false`, all fields associated with the record are returned. |  true |
| Return Search Columns a| Boolean |  Defaults to `true`, meaning that only search columns are returned in your search. |  true |
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Message of [String] payload and [<<NetsuiteSoapAttributes>>] attributes
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:SESSION_TIMED_OUT


[[Update]]
== Update
`<netsuite:update>`


Updates an existing record.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The update record request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[UpdateInviteeStatus]]
== Update Invitee Status
`<netsuite:update-invitee-status>`


Sets a new invitation status for a given event.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The update invitee status request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[UpdateInviteeStatusList]]
== Update Invitee Status List
`<netsuite:update-invitee-status-list>`


Sets multiple new invitation statuses for a given event.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| Any |  The update invitee status list request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[UpdateList]]
== Update List
`<netsuite:update-list>`


Updates one or more instances of a record type. If there are multiple records, they can either be of the same record type or different record types.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The update list request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


[[Upsert]]
== Upsert
`<netsuite:upsert>`


Adds a new instance or updates a record instance in NetSuite. This operation is similar to both the Add and Update operations, but you can run Upsert without first determining whether a record exists in NetSuite.

Identify a record by its external ID and its record type. If a record of the specified type with a matching external ID exists in the system, it is updated. If it does not exist, a new record is created. Because the external ID is mandatory for this operation, Upsert is supported only for records that support the external ID field. This operation prohibits the passing of internal ID values.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The Upsert request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT
* NETSUITE:USER_ERROR


[[UpsertList]]
== Upsert List
`<netsuite:upsert-list>`


Adds or updates one or more instances of a record type in NetSuite. This operation is similar to both the Add List and Update List operations, but you can run Upsert List without first determining whether the record types exist in NetSuite.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Type a| String |  The record type for the operation. |  |
| Message a| Any |  The Upsert List request to complete. |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* NETSUITE:CONNECTIVITY
* NETSUITE:INVALID_VERSION
* NETSUITE:MAX_RCRDS_EXCEEDED
* NETSUITE:NETSUITE_ERROR
* NETSUITE:NETSUITE_SOAP_FAULT
* NETSUITE:RETRY_EXHAUSTED
* NETSUITE:SESSION_TIMED_OUT


== Sources

[[DeletedObjectListener]]
== On Deleted Object
`<netsuite:deleted-object-listener>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Start Date Time a| DateTime |  Specify a local date. If this field is empty, this operation retrieves the selected objects from the time when the Mule app started. |  |
| Page Size a| Number |  Maximum amount of results per page. |  10 |
| Body Fields Only a| Boolean |  Returns the information in the record's body fields only, which significantly improves performance. Fields in associated lists or sublists are not returned. If you set this field to `false`, all fields associated with the record are returned. |  true |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>



[[ModifiedObjectListener]]
== On Modified Object
`<netsuite:modified-object-listener>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Start Date Time a| DateTime |  Specify a local date. If this field is empty, this operation retrieves the selected objects from the time the Mule app started. |  |
| Page Size a| Number |  Maximum amount of results per page. |  10 |
| Body Fields Only a| Boolean |  Returns the information in the record's body fields only, which significantly improves performance. Fields in associated lists or sublists are not returned. If you set this field to `false`, all fields associated with the record are returned. |  true |
| Object Type a| String |  The type of record that will be retrieved when modified. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>



[[NewObjectListener]]
== On New Object
`<netsuite:new-object-listener>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Start Date Time a| DateTime |  Specify a local date. If this field is empty, this operation will retrieve the selected objects from the time the Mule app was started. |  |
| Page Size a| Number |  Maximum amount of results per page. |  10 |
| Body Fields Only a| Boolean |  Returns the information in the record's body fields only, which significantly improves performance. Fields in associated lists or sublists are not returned. If you set this field to `false`, all fields associated with the record are returned. |  true |
| Object Type a| String |  The type of record that will be retrieved when modified. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<NetsuiteSoapAttributes>>
|===

=== For Configurations

* <<Config>>



== Types
[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[CrlFile]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[NetsuiteSoapAttributes]]
=== Netsuite Soap Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Soap Headers a| Object |  |  |
| Transport Additional Data a| Object |  |  |
| Transport Headers a| Object |  |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  |
| Object Store a| ObjectStore | The object store where the redelivery counter for each message is stored. |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is `false`. |  |
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering, and there are different buffering strategies. Mule keeps a portion of contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The number of instances to initially keep in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | The maximum amount of instances to keep in memory. If more than that is required, content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RandomizedExponentialBackoff]]
=== Randomized Exponential Backoff

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Retries a| Number | Maximum number of retries. | 200 |
| Max Waiting Time Between Retries a| Number | Maximum waiting time between retries. | 64000 |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
